# MarronAngry

./: Dockerfile  Dockerfile_production  README.md  TODO  build.sh  db_test.py  docker-compose-production.yaml  docker-compose.yaml  docker-compose.yml  justrun.yaml  main.py  pyproject.toml
client/: Dockerfile  Dockerfile_production  index.html  package.json  vite.config.ts
client/src/: App.svelte
client/src/components/: AccountDelete.svelte  Field.svelte  Idea.svelte  NavBrand.svelte  Notification.svelte  Onetime.svelte  OnetimeSetup.svelte  Organization.svelte  PasswordUpdate.svelte  Project.svelte  ProjectSwitcher.svelte  Task.svelte
client/src/openapi/: index.ts  runtime.ts
client/src/pages/: Home.svelte  Organization.svelte  Project.svelte  ProjectManage.svelte  Settings.svelte  Signin.svelte  Signup.svelte  Task.svelte
client/src/utils/: index.ts  store.ts
example/: sso.py
migrations/models/: 0_20221219163440_init.py  0_20230109195622_init.py  1_20230110020529_update.py  2_20230110075319_update.py  3_20230116055823_update.py  4_20230123065302_update.py  5_20230313062457_update.py  6_20230330181059_update.py  6_20230506074856_update.py  7_20230507191837_update.py
server/: __init__.py  config.py  db.py  mail.py  security.py  upload.py
server/models/: db.py  request.py  write.py
server/models/db/: __init__.py  auth.py  project.py  task.py  user.py
server/models/read/: user.py
server/models/response/: user.py
server/routes/: __init__.py  file.py  idea.py  oauth.py  organization.py  project.py  sso.py  task.py  user.py
tests/: user.py
(+38 files in other folders)
