[tool.poetry]
name = "webapi"
version = "0.0.1b"
description = "Marusoftware WebAPI Server"
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8<="


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
