[tool.poetry]
name = "webapi"
version = "0.0.1b"
description = "Marusoftware WebAPI Server"
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["full"], version = "^0.82.0"}
sqlmodel = "^0.0.8"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
