[tool.poetry]
name = "webapi"
version = "0.0.1b"
description = "Marusoftware WebAPI Server"
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
sqlmodel = {git = "https://github.com/maru0123-2004/sqlmodel.git"}
python-multipart = "^0.0.5"
SQLAlchemy-Utils = "^0.38.3"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = "^1.7.4"
httpx = "^0.23.0"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
